# inhibitor

./: .gitignore  AUTHORS  Makefile.am  README  TODO  actions.py  autogen.sh  base.py  base_funcs.py  brontes.py  brontes_config.py  config.py  configure.ac  embedded.py  inhibitor-functions.sh  inhibitor-run.sh  inhibitor.py  min_actions.py  snapshot.py  source.py  stage.py  util.py
examples/: bootstrap-lucid.py  example_script.sh  gentoo.py  lucid.py  needed.ex
inhibitor/: Makefile.am  __init__.py  actions.py  embedded.py  inhibitor.py  source.py  stage.py  util.py
m4/: ax_python_devel.m4
sh/: Makefile.am  inhibitor-functions.sh  inhibitor-run.sh  kernel.sh
sh/early-userspace/modules/: README  hostname.init  loggers.conf  loggers.init  mdadm.conf  mdadm.init  splash.files  splash.init
sh/early-userspace/root/etc/: functions.sh  group  inittab  profile  rc-functions.sh  shadow
sh/early-userspace/root/etc/init.d/: dev  kcmdline  modprobe  mount  proc  shutdown  sys
sh/early-userspace/root/sbin/: rc  shutdown
