AC_PREREQ([2.63])
AC_INIT([inhibitor], [0.1], [http://www.github.com/jsbronder/inhibitor])
AC_CONFIG_AUX_DIR(build-aux)
AM_INIT_AUTOMAKE([dist-bzip2])
AM_MAINTAINER_MODE
AC_PROG_INSTALL
AC_PROG_LN_S
AM_PATH_PYTHON
AC_PYTHON_DEVEL( >= '2.6' )
AC_CONFIG_MACRO_DIR([m4])

AC_CONFIG_FILES([
    Makefile
    inhibitor/Makefile
    sh/Makefile
])

AC_OUTPUT
